feat: first commit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,14 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Hero from '../components/Hero.astro';
-import Services from "../components/Services.astro"
-import Team from '../components/Team.astro';
-import Testimonial from '../components/Testimonial.astro';
-import Contact from '../components/Contact.astro';
-import Case from '../components/Case.astro';
+import Layout from "../layouts/Layout.astro";
+import Inici from "../components/Inici.astro";
+import Gegants from "../components/Gegants.astro";
+import Contacte from "../components/Contacte.astro";
 ---
 
 <Layout title="Positivus">
-	<main class="space-y-20">
-		<Hero/>
-		<Services/>
-		<Case/>
-		<Team/>
-		<Testimonial/>
-		<Contact/>
-	</main>
+  <main>
+    <Inici />
+    <Gegants />
+    <Contacte />
+  </main>
 </Layout>
