--- a/src/components/Gegants.astro
+++ b/src/components/Gegants.astro
@@ -17,47 +17,49 @@ import gegants from "./Data/gegants.json";
       <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 gap-4">
         <!-- card start-->
         {
-          gegants.map(({ background, name1, name2, image, link, origin }) => (
-            <div class={background}>
-              <div class="flex-col justify-center items-start gap-[93px] inline-flex">
-                <div class="flex-col justify-start items-start flex">
-                  <div
-                    class="px-[7px] bg-yellow-300 flex-col justify-start items-start gap-2.5 flex "
-                    style="max-width: 400px;"
-                  >
-                    <div class=" text-3xl font-medium">{name1}</div>
-                  </div>
-                  <div
-                    class="px-[7px] pt-4 bg-yellow-300 flex-col justify-start items-start gap-2.5 flex"
-                    style="max-width: 400px;"
-                  >
-                    <div class="text-normal font-normal">{name2}</div>
-                  </div>
-                </div>
-
-                <a
-                  class="justify-start items-center gap-[15px] inline-flex"
-                  href={link[0]}
-                  target="_blank"
-                >
-                  <div class="w-[41px] h-[41px] relative">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="41"
-                      height="41"
-                      viewBox="0 0 24 24"
-                      style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
+          gegants.map(({ background, name1, name2, image, link, id }) => (
+            <div class:list={[background, id]}>
+              <div class="p-4 opacity-80 bg-white rounded-[45px]">
+                <div class="flex-col justify-center items-start gap-[93px] inline-flex ">
+                  <div class="flex-col justify-start items-start flex">
+                    <div
+                      class="px-[7px] bg-yellow-300 flex-col justify-start items-start gap-2.5 flex "
+                      style="max-width: 400px;"
                     >
-                      <path d="M19.071 4.929c-3.899-3.898-10.243-3.898-14.143 0-3.898 3.899-3.898 10.244 0 14.143 3.899 3.898 10.243 3.898 14.143 0 3.899-3.9 3.899-10.244 0-14.143zm-3.536 10.607-2.828-2.829-3.535 3.536-1.414-1.414 3.535-3.536-2.828-2.829h7.07v7.072z" />
-                    </svg>
+                      <div class=" text-3xl font-medium">{name1}</div>
+                    </div>
+                    <div
+                      class="px-[7px] pt-4 bg-yellow-300 flex-col justify-start items-start gap-2.5 flex"
+                      style="max-width: 400px;"
+                    >
+                      <div class="text-normal font-normal">{name2}</div>
+                    </div>
                   </div>
-                  <div class="text-xl font-normal leading-7">
-                    Més informació
-                  </div>
-                </a>
-              </div>
-              <div class="w-52 h-auto p-1 justify-center items-center flex">
-                <img class="block h-auto rounded-lg" src={image} />
+
+                  <a
+                    class="justify-start items-center gap-[15px] inline-flex"
+                    href={link[0]}
+                    target="_blank"
+                  >
+                    <div class="w-[41px] h-[41px] relative">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="41"
+                        height="41"
+                        viewBox="0 0 24 24"
+                        style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
+                      >
+                        <path d="M19.071 4.929c-3.899-3.898-10.243-3.898-14.143 0-3.898 3.899-3.898 10.244 0 14.143 3.899 3.898 10.243 3.898 14.143 0 3.899-3.9 3.899-10.244 0-14.143zm-3.536 10.607-2.828-2.829-3.535 3.536-1.414-1.414 3.535-3.536-2.828-2.829h7.07v7.072z" />
+                      </svg>
+                    </div>
+                    <div class="text-xl font-normal leading-7">
+                      Més informació
+                    </div>
+                  </a>
+                </div>
+                <div class="hidden md:flex w-52 h-auto p-1 justify-center items-center">
+                  <img class="h-auto rounded-lg" src={image} />
+                </div>
               </div>
             </div>
           ))
@@ -66,4 +68,28 @@ import gegants from "./Data/gegants.json";
       </div>
     </div>
   </div>
+  <style>
+    @media (width < 768px) {
+      .vells {
+        background-image: url("/gegants/vells.jpg");
+        background-size: cover;
+      }
+
+      .nous {
+        background-image: url("/gegants/nous.jpg");
+        background-size: cover;
+      }
+
+      .arrel {
+        background-image: url("/gegants/arrel.jpg");
+        color: rgb(35, 42, 85);
+        background-size: cover;
+      }
+
+      .montserrat {
+        background-image: url("/gegants/montserrat.jpg");
+        background-size: cover;
+      }
+    }
+  </style>
 </Container>
