fix: jpg to webp

--- a/src/components/Gegants.astro
+++ b/src/components/Gegants.astro
@@ -71,23 +71,23 @@ import gegants from "./Data/gegants.json";
   <style>
     @media (width < 768px) {
       .vells {
-        background-image: url("/gegants/vells.jpg");
+        background-image: url("/gegants/vells.webp");
         background-size: cover;
       }
 
       .nous {
-        background-image: url("/gegants/nous.jpg");
+        background-image: url("/gegants/nous.webp");
         background-size: cover;
       }
 
       .arrel {
-        background-image: url("/gegants/arrel.jpg");
+        background-image: url("/gegants/arrel.webp");
         color: rgb(35, 42, 85);
         background-size: cover;
       }
 
       .montserrat {
-        background-image: url("/gegants/montserrat.jpg");
+        background-image: url("/gegants/montserrat.webp");
         background-size: cover;
       }
     }
