--- a/src/components/Inici.astro
+++ b/src/components/Inici.astro
@@ -26,7 +26,7 @@ import Container from "./Container.astro";
         </div>
       </div>
       <div class="flex items-center py-5 md:w-6/12 md:pb-20 md:pt-32">
-        <img src="/portada.jpg" width="100%" alt="Hero" class="rounded-xl" />
+        <img src="/portada.webp" width="100%" alt="Hero" class="rounded-xl" />
       </div>
     </div>
     <div class="flex-row items-center">
