--- a/src/components/Inici.astro
+++ b/src/components/Inici.astro
@@ -85,7 +85,7 @@ import Container from "./Container.astro";
         <div
           class="p-4 grayscale transition duration-200 hover:grayscale-0 w-auto m-auto"
         >
-          <a href="#contactes">
+          <a href="#contacte">
             <svg
               class="h-8"
               xmlns="http://www.w3.org/2000/svg"
